lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:4: error: type mismatch;
 found   : java.util.List[lessons.lander.universe.Point]
 required: scala.collection.immutable.List[lessons.lander.universe.Point]
var Liste:List[Point] = getSol()
                              ^Lander:6: error: not found: value y
	 	if (y(Liste(i))==y(Liste(i+1))) {
                    ^Lander:7: error: too many arguments for method getSol: ()java.util.List[lessons.lander.universe.Point]
	 		debut=getSol(i)
                                    ^Lander:8: error: too many arguments for method getSol: ()java.util.List[lessons.lander.universe.Point]
	 		fin=getSol(i+1)
                                  ^